<?xml version="1.0" encoding="utf-8"?>
<resources>

       <!-- Generics -->
    <string name="generic_bt_ok">OK</string>
    <string name="generic_bt_cancel">キャンセル</string>
    <string name="generic_bt_cancel_en">Cancel</string>
    <string name="generic_bt_reset_en">Reset</string>
    
    <string name="generic_tv_confirm">確認</string>
    <string name="generic_tv_menu">メニュー</string>
    <string name="generic_tv_register">登録</string>
    <string name="generic_tv_edit">編集</string>
    <string name="generic_tv_delete">削除</string>
    <string name="generic_tv_confirm_delete_en">Delete?</string>
    <string name="generic_tv_upload">Upload</string>

    
    <string name="app_name">app.twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="title_activity_main">Tweeting</string>

    <!-- Menu: main -->
    	<string name="menu_main_logout">Logout</string>
    	<string name="menu_main_query">Query</string>
    	<string name="menu_main_timeline">Timeline</string>
    	<string name="menu_main_tweet">Tweet</string>
    	<string name="menu_main_refresh_screen">Refresh screen</string>
    	<string name="menu_main_admin">Admin</string>
    	<string name="menu_main_horizontal_listview">Horizontal LV</string>
    
    <!-- Menu: Tweet -->
    	<string name="menu_twt_add_pattern">Add pattern</string>
    	
    <!-- Menu: Timeline -->
    	<string name="menu_timeline_filter">Filter</string>
    	
    <!-- UI labels -->
    	<string name="btn_lbl_time_line">Timeline</string>
    	<string name="btn_lbl_memo_patterns">Pattern</string>
    
    <!-- actv_twt.xml -->
    	<string name="actv_twt_bt_tweet">Tweet</string>
    	<string name="actv_twt_bt_back">Back</string>
    	<string name="actv_twt_bt_add_patterns">Pattern</string>
    	
    <!-- Dialog: Admin -->
    	<string name="dlg_admin_title">Admin</string>
    	<string name="dlg_admin_exec_sql">Exec sql</string>
    	<string name="dlg_admin_backup_db">Backup DB</string>

    <!-- dlg_admin_patterns.xml -->
    	<string name="dlg_admin_patterns_title">Admin patterns</string>

   	<!-- dlg_register_patterns.xml -->
	    <string name="dlg_register_patterns_title">Register pattern</string>
	    <string name="dlg_register_patterns_tv_word">Pattern</string>

   	<!-- dlg_admin_patterns_item -->
	    <string name="dlg_admin_patterns_item_title">Pattern</string>

   	<!-- dlg_filter_timeline.xml -->
	    <string name="dlg_filter_timeline_title">Filter</string>

	<!-- preferences.xml -->
		<string name="prefs_save_text_title">
		    					Save text</string>
		<string name="prefs_save_text_summary">
		    					When leaving the activity</string>
		<string name="prefs_save_text_key">
		    					pref_save_text</string>
		    					
		<string name="prefs_timeline_size_title">
		    					Timeline size</string>
		<string name="prefs_timeline_size_summary">
		    					How many tweets in the line?</string>
		<string name="prefs_timeline_size_key">
		    					pref_timeline_size</string>
		    					
		<string name="prefs_temp_saved_text_key">
		    					temp_pref_saved_text</string>
		
	<!-- Preferences -->	
		<string name="prefs_shared_prefs_name">TwtApp_prefs</string>

	<!-- listview demo -->
		<string name="hello">HELLO</string>
</resources>
