<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_main_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>
    
    <item 
        android:id="@+id/menu_main_logout"
        android:title="@string/menu_main_logout"
        android:icon="@drawable/menu_icon_logout_32x32"
        >
    </item>
    
    <item 
        android:id="@+id/menu_main_admin"
        android:title="@string/menu_main_admin"
        android:icon="@drawable/menu_icon_admin_32x32"
        >
    </item>
    
    <item 
        android:id="@+id/menu_main_horizontal_listview"
        android:title="@string/menu_main_horizontal_listview"
        android:icon="@drawable/menu_icon_horizontal_listview_32x32"
        >
    </item>
    
</menu>
