<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/actv_twt_et_content"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="top|left"
        android:textSize="20sp" />

    <!-- REF Spacing http://stackoverflow.com/questions/12047369/how-to-set-border-of-gridview-on-android -->

    <GridView
        android:id="@+id/actv_twt_gv"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@color/blue1"
        android:gravity="center_vertical"
        android:horizontalSpacing="5dp"
        android:numColumns="4"
        android:padding="5dp"
        android:verticalSpacing="5dp" >

    </GridView>

      <!-- com.sandy.demo.HorizontalListView -->

	  <app.twitter.specials.HorizontalListView
	      android:id="@+id/actv_twt_lv_horizontal"
	      android:layout_width="wrap_content"
	      android:layout_height="60dp"
	      android:layout_margin="5dp"
	      android:layout_marginBottom="3dp"
	      android:layout_marginLeft="10dp"
	      android:layout_marginRight="10dp"
	      android:layout_marginTop="3dp"
	      android:background="#ddd" />
	    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@color/darkgreen" >

        <Button
            android:id="@+id/actv_twt_bt_back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/actv_twt_bt_back"
            android:textColor="@color/red"
            android:textSize="25sp" />

        <Button
            android:id="@+id/actv_twt_bt_tweet"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/actv_twt_bt_tweet"
            android:textColor="@color/blue1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/actv_twt_bt_pattern"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/actv_twt_bt_add_patterns"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>